# my-canister-dashboard

./: .gitignore  Dockerfile  README.md  build-docker.sh  rust-toolchain.toml
.github/workflows/: ci.yml  pr.yml
assets/: hashes.txt
assets/frontend/: index.js
assets/wasm/: my-canister-installer.wasm
candid/: my-canister.did  my-canister.did.d.ts
canister-dashboard-frontend/: .dockerignore  .env.development  .gitignore  .prettierignore  Dockerfile.build  build-deterministic.sh  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.js
canister-dashboard-frontend/checksums/: hashes.txt
canister-dashboard-frontend/src/: config.ts  index.html  loading.ts  main.ts  styles.css  top-up.ts  utils.ts
canister-dashboard-frontend/src/api/: canister.ts  cmc.ts  ledger.ts  management.ts
canister-dashboard-frontend/src/components/: alternativeOrigins.ts  auth.ts  balance.ts  controllers.ts  status.ts
canister-dashboard-rs/: Cargo.toml  README.md
canister-dashboard-rs/assets/: canister-dashboard-MlD2Zc6y.js  canister-dashboard.html  ii-alternative-origins  style-CQdQslat.css
canister-dashboard-rs/checksums/: hashes.txt
canister-dashboard-rs/src/: alternative_origins.rs  ii_principal.rs  lib.rs  wasm_status.rs
declarations/: index.d.ts  index.js  my-canister.did.d.ts  my-canister.did.js
my-canister-dashboard-js/: .npmignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
my-canister-dashboard-js/scripts/: publish-npm.sh
my-canister-dashboard-js/src/: actor.ts  constants.ts  dashboard.ts  index.ts  myCanisterBackend.ts
my-canister-dashboard-rs/: Cargo.toml  Dockerfile.build  build-deterministic.sh  dfx.json
my-canister-dashboard-rs/candid/: index.d.ts  index.js  my-canister-installer.did.d.ts  my-canister-installer.did.js
my-canister-dashboard-rs/checksums/: hashes.txt
my-canister-dashboard-rs/src/candid/: my-canister.did
my-canister-dashboard-rs/src/my-canister-dashboard/: Cargo.toml
my-canister-dashboard-rs/src/my-canister-dashboard/assets/: canister-dashboard.html  index.html
my-canister-dashboard-rs/src/my-canister-dashboard/src/: alternative_origins.rs  asset_configs.rs  ii_principal.rs  lib.rs
my-canister-dashboard-rs/src/my-canister-installer/: Cargo.toml
my-canister-dashboard-rs/src/my-canister-installer/src/: lib.rs
my-canister-dashboard-rs/src/my-dashboard-wasm/src/: lib.rs
my-canister-dashboard-rs/wasm/: hashes.txt  my-canister-installer.wasm  my-dashboard-wasm.wasm
my-dashboard-wasm/: .gitignore  Cargo.toml  Dockerfile.build  build-deterministic.sh  dfx.json
my-dashboard-wasm/candid/: my-canister.did
my-dashboard-wasm/checksums/: hashes.txt
my-dashboard-wasm/src/canister-dashboard-rs/: Cargo.toml
my-dashboard-wasm/src/canister-dashboard-rs/src/: alternative_origins.rs  wasm_status.rs
my-dashboard-wasm/src/my-canister-dashboard/: Cargo.toml
my-dashboard-wasm/src/my-dashboard-wasm/: Cargo.toml
my-dashboard-wasm/src/my-dashboard-wasm/src/: lib.rs
my-dashboard-wasm/wasm/: my-dashboard-wasm.wasm
my-empty-wasm/: Cargo.toml  Dockerfile.build  build-deterministic.sh  dfx.json
my-empty-wasm/checksums/: hashes.txt
my-empty-wasm/src/my-empty-wasm/: Cargo.toml
my-empty-wasm/src/my-empty-wasm/src/: lib.rs
my-empty-wasm/wasm/: my-empty-wasm.wasm
scripts/: frontend-lint-format.sh  generate-bindings.sh  github-deterministic-build.sh  js-lint-format.sh  prerelease.sh  publish-all.sh  publish-crate.sh  publish-npm.sh  release.sh  rust-lint-format.sh  tag-npm-latest.sh
