[workspace]
members = [
    "src/my-dashboard-wasm",
    "src/my-canister-dashboard"
]
resolver = "2"


[workspace.package]
version = "0.4.0-beta.6"
edition = "2024"
description = "Self-contained dashboard assets for Internet Computer canisters (BETA - not production ready)"
license = "MIT"
authors = ["Canister Dashboard Contributors"]
repository = "https://github.com/Web3NL/my-canister-dashboard"
keywords = ["internet-computer", "canister", "dashboard", "ic", "dfinity"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[workspace.dependencies]
candid = "0.10.14"
ic-asset-certification = "3.0.3"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-http-certification = "3.0.3"
include_dir = "0.7.4"
my-canister-dashboard = { path = "src/my-canister-dashboard" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = "abort"
