[package]
name = "my-canister-dashboard"
version = "0.4.0-beta.11"
edition = "2024"
description = "Self-contained dashboard assets for Internet Computer canisters (BETA - not production ready)"
license = "MIT"
authors = ["Canister Dashboard Contributors"]
repository = "https://github.com/Web3NL/my-canister-dashboard/tree/main/my-canister-dashboard-rs/src/my-canister-dashboard"
keywords = ["internet-computer", "canister", "dashboard", "ic", "dfinity"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[dependencies]
candid = "0.10.14"
ic-asset-certification = "3.0.3"
ic-http-certification = "3.0.3"
ic-cdk = "0.17"
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
